<resources>
    <string name="app_name">TranzPost</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_otpphone_number">Enter Code</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="name">Name</string>
    <string name="transport_filr">Name of the Transport Firm</string>
    <string name="user_email">Email</string>
    <string name="password">Password</string>
    <string name="mobile">Mobile</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string-array name="attachment">
        <item>@string/camera</item>
        <item>@string/gallery</item>
    </string-array>
    <string name="city">City</string>
    <string name="number_of_owned_trucks">Number of Owned Trucks</string>
    <string name="number_of_attached_trucks">Number of Attached Trucks</string>

    <string name="registered_number">Registered Number</string>
    <string name="alternate_number">Alternate Number</string>

    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>

    <string name="please_provide_name">Please provide name</string>
    <string name="please_provide_password">Please provide password</string>
    <string name="please_provide_email">Please provide email</string>
    <string name="please_provide_a_valid_email">Please provide a valid email</string>

    <string name="please_check_your_internet_connection">Please check your internet connection!</string>
    <string name="failed_to_connect_to_the_server">Failed to connect to the server</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="available_orders">Available Orders</string>
    <string name="my_orders">My Orders</string>
    <string name="my_bookings">My Bookings</string>
    <string name="logout">Logout</string>
    <string name="document">Document</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="charges">Halting Charges</string>
</resources>
