<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/rl_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/nav_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <!--Here you can give your custom layouts if required-->

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll_residemmenu_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/_10dp">

                    <ImageView
                        android:layout_width="@dimen/_30dp"
                        android:layout_height="@dimen/_30dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_home_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.83"
                        android:paddingLeft="10dp"
                        android:text="@string/home"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_residemmenu_available_offers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/_10dp">

                    <ImageView
                        android:layout_width="@dimen/_30dp"
                        android:layout_height="@dimen/_30dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_assignment_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.83"
                        android:paddingLeft="10dp"
                        android:text="@string/available_orders"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_residemmenu_my_offers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/_10dp">

                    <ImageView
                        android:layout_width="@dimen/_30dp"
                        android:layout_height="@dimen/_30dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_assignment_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.83"
                        android:paddingLeft="10dp"
                        android:text="@string/my_orders"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_residemmenu_charge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/_10dp">

                    <ImageView
                        android:layout_width="@dimen/_30dp"
                        android:layout_height="@dimen/_30dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_attach_money_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.83"
                        android:paddingLeft="10dp"
                        android:text="@string/charges"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_residemmenu_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/_10dp">

                    <ImageView
                        android:layout_width="@dimen/_30dp"
                        android:layout_height="@dimen/_30dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:padding="5dp"
                        android:src="@drawable/profile" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.83"
                        android:paddingLeft="10dp"
                        android:text="@string/profile"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_residemmenu_notification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/_10dp">

                    <ImageView
                        android:layout_width="@dimen/_30dp"
                        android:layout_height="@dimen/_30dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_settings_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.83"
                        android:paddingLeft="10dp"
                        android:text="@string/settings"
                        android:textColor="@color/black" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/ll_residemmenu_contactus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/_10dp">

                    <ImageView
                        android:layout_width="@dimen/_30dp"
                        android:layout_height="@dimen/_30dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_call_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.83"
                        android:paddingLeft="10dp"
                        android:text="@string/contact_us"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_residemmenu_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/_10dp">

                    <ImageView
                        android:layout_width="@dimen/_30dp"
                        android:layout_height="@dimen/_30dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:padding="5dp"
                        android:src="@drawable/logout"
                        android:tint="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.83"
                        android:paddingLeft="10dp"
                        android:text="@string/logout"
                        android:textColor="@color/black" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>