<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_registration_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/_20dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_registration_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_80dp"
                app:errorEnabled="true">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_registration_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textCapSentences"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="@dimen/fs_16" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_registration_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_registration_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:focusable="false"
                    android:hint="@string/mobile"
                    android:inputType="number"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="@dimen/fs_16" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_registration_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_registration_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_email"
                    android:inputType="textEmailAddress"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="@dimen/fs_16" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_registration_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_registration_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textSize="@dimen/fs_16" />

            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_5dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/_5dp">

                <CheckBox
                    android:id="@+id/chkUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/view_pager_bg"
                    android:text="Customer"
                    android:textColor="@color/password_visibility" />


                <CheckBox
                    android:id="@+id/chkTransPorter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/view_pager_bg"
                    android:text="TransPorter"
                    android:textColor="@color/password_visibility" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_5dp"
                android:gravity="center"
                android:padding="@dimen/_5dp">

                <CheckBox
                    android:id="@+id/chkTruckowner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/view_pager_bg"
                    android:text="Truck Owner"
                    android:textColor="@color/password_visibility" />


                <CheckBox
                    android:id="@+id/chkTransporterTruckowner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/view_pager_bg"
                    android:text="TransPorter and Truck Owner"
                    android:textColor="@color/password_visibility" />

            </LinearLayout>

            <Button
                android:id="@+id/bt_registration_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15dp"
                android:background="@drawable/bg_button"
                android:text="@string/sign_up"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/link_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:padding="15dp"
                android:text="Already registered? Log In"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:visibility="visible" />

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/pb_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>
